main css responsize

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,9 +8,15 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>Memory</title>
 	</head>
-	<body>
-		<h1>Astro</h1>
+	<body class="">
+		<div class="md:m-10 bg-base-300 card card-body shadow-xl w-full md:w-1/2 lg:w-1/4 md:fixed md:rounded-lg rounded-none">
+			<h1 class="text-xl card-title"><b>Memory Graph</b></h1>
+			<p>The performance API provides information about current memory usage. This site graphs the output data.</p>
+		</div>
+		<div class="h-screen w-screen flex items-center justify-center">
+			
+		</div>
 	</body>
 </html>
