--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
-
+import DisplayMemory from '../components/DisplayMemory.astro';
+import Stresser from '../components/Stresser.astro';
 ---
 
 <html lang="en">
@@ -11,12 +12,13 @@
 		<title>Memory</title>
 	</head>
 	<body class="">
-		<div class="md:m-10 bg-base-300 card card-body shadow-xl w-full md:w-1/2 lg:w-1/4 md:fixed md:rounded-lg rounded-none">
+		<div class="lg:m-10 bg-base-300 card card-body shadow-xl w-full lg:w-1/4 lg:fixed md:rounded-lg rounded-none">
 			<h1 class="text-xl card-title"><b>Memory Graph</b></h1>
 			<p>The performance API provides information about current memory usage. This site graphs the output data.</p>
 		</div>
-		<div class="h-screen w-screen flex items-center justify-center">
-			
+		<div class="h-screen w-screen flex flex-col items-center justify-center">
+			<DisplayMemory />
+			<Stresser />
 		</div>
 	</body>
 </html>
