--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import Stresser from '../components/Stresser.astro';
 	<body class="">
 		<div class="lg:m-10 bg-base-300 card card-body shadow-xl w-full lg:w-1/4 lg:fixed md:rounded-lg rounded-none">
 			<h1 class="text-xl card-title"><b>Memory Graph</b></h1>
-			<p>The performance API provides information about current memory usage. This site graphs the output data.</p>
+			<p>The performance API provides information about current memory usage. This site graphs the output data. The performance API is pretty much <a href="https://developer.mozilla.org/en-US/docs/Web/API/Performance/memory" class="link">only available in chrome</a>, and is currently depricated. Try opening your browsers devtools and messing around, it's interesting.</p>
 		</div>
 		<div class="h-screen w-screen flex flex-col items-center justify-center">
 			<DisplayMemory />
