test to try and make js not disapear when building

--- a/src/components/Stresser.astro
+++ b/src/components/Stresser.astro
@@ -3,6 +3,7 @@
 
 <button class="btn btn-primary mb-5" id="stress1">Load 100,000 items into array</button>
 <button class="btn btn-primary" id="stress2">Sort 100,000 items</button>
+<p class="hidden"></p>
 <!-- <button class="btn btn-primary" id="stress2">Create 20 setTimeouts</button> -->
 <script>
     document.getElementById('stress1').addEventListener('click', function() {
@@ -10,16 +11,19 @@
         for (var i = 0; i < 100000; i++) {
             arr.push(Math.random());
         }
+        document.querySelector('p').textContent = arr.length;
         console.log('Array created');
     });
-
+    
     document.getElementById('stress2').addEventListener('click', function() {
         var arr = [];
         for (var i = 0; i < 100000; i++) {
             arr.push(Math.random());
         }
+        document.querySelector('p').textContent = arr.length;
         console.log('Array created');
         arr.sort();
+        document.querySelector('p').textContent = arr.length;
         console.log('Array sorted');
     });
 </script>
