--- a/src/components/Stresser.astro
+++ b/src/components/Stresser.astro
@@ -3,7 +3,7 @@
 
 <button class="btn btn-primary mb-5" id="stress1">Load 100,000 items into array</button>
 <button class="btn btn-primary" id="stress2">Sort 100,000 items</button>
-<p class="hidden"></p>
+<p class="hidden" id="hidden"></p>
 <!-- <button class="btn btn-primary" id="stress2">Create 20 setTimeouts</button> -->
 <script>
     document.getElementById('stress1').addEventListener('click', function() {
@@ -11,7 +11,7 @@
         for (var i = 0; i < 100000; i++) {
             arr.push(Math.random());
         }
-        document.querySelector('p').textContent = arr.length;
+        document.querySelector('#hidden').textContent = arr.length;
         console.log('Array created');
     });
     
@@ -20,10 +20,10 @@
         for (var i = 0; i < 100000; i++) {
             arr.push(Math.random());
         }
-        document.querySelector('p').textContent = arr.length;
+        document.querySelector('#hidden').textContent = arr.length;
         console.log('Array created');
         arr.sort();
-        document.querySelector('p').textContent = arr.length;
+        document.querySelector('#hidden').textContent = arr.length;
         console.log('Array sorted');
     });
 </script>
