--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,6 +19,7 @@ import Stresser from '../components/Stresser.astro';
 		<div class="h-screen w-screen flex flex-col items-center justify-center">
 			<DisplayMemory />
 			<Stresser />
+			the things that we ultimately write down are simply by products of our
 		</div>
 	</body>
 </html>
